DrmGpu: add gbm device nullptr check

BUG: 433145